// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer AppContainer renders correctli 1`] = `
<div
  className="wrapper"
>
  <header
    className="header"
  >
    <div
      className="container"
    >
      <h1
        className="h1"
      >
        FILMS
      </h1>
      <form
        action=""
        onSubmit={[Function]}
      >
        <input
          className="searchField"
          tabIndex="0"
          type="search"
        />
        <button
          className="btnSearch"
          type="submit"
        >
          ⚲
        </button>
      </form>
    </div>
  </header>
  <main>
    <section
      className="movieDetailsPageContainer"
      style={
        Object {
          "backgroundImage": "url(https://image.tmdb.org/t/p/w1280test",
          "backgroundPosition": "center",
          "backgroundRepeat": "no-repeat",
          "backgroundSize": "cover",
        }
      }
    >
      <div
        className="mainfilmInfo"
      >
        <div
          className="container"
        >
          <div
            className="mainFilmTitle"
          >
            <h2
              className="filmTitle"
            />
            <div
              className="genres"
            >
              <ul />
            </div>
            <div
              className="starContainer"
            >
              <p
                className="rate"
              >
                0
              </p>
            </div>
          </div>
          <div
            className="hideInfo"
            id="mainFilmOverwie"
          >
            <div
              className="mainFilmInfo__info"
            >
              <p>
                
              </p>
            </div>
            <div
              className="btnContainer"
            >
              <button
                className="watch"
                onClick={[Function]}
                tabIndex="0"
                type="button"
              >
                Watch Now
              </button>
              <button
                className="viewInfo"
                id="info"
                onClick={[Function]}
                tabIndex="0"
                type="button"
              >
                View Info
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      className="movieList"
    >
      <div
        className="container"
      >
        <div
          className="moviesSelector"
        >
          <nav>
            <ul>
              <li>
                <button
                  href="#"
                  onClick={[Function]}
                  type="button"
                >
                  Trending
                </button>
              </li>
              <li>
                <button
                  href="#"
                  onClick={[Function]}
                  type="button"
                >
                  Top Rated
                </button>
              </li>
              <li>
                <button
                  href="#"
                  onClick={[Function]}
                  type="button"
                >
                  Coming Soon
                </button>
              </li>
              <li>
                <select
                  id=""
                  name="genre"
                  onChange={[Function]}
                >
                  <option
                    value=""
                  >
                    Genre
                  </option>
                </select>
              </li>
            </ul>
          </nav>
          <div
            className="typeView"
          >
            <button
              id="cards"
              onClick={[Function]}
              type="button"
            >
              ⚏
            </button>
            <button
              id="lines"
              onClick={[Function]}
              type="button"
            >
              ⚌
            </button>
          </div>
        </div>
        <div
          className="moviesWrapper"
        >
          <article
            className="movieContainer cards"
            onMouseLeave={[Function]}
          >
            <figure
              className="figcaptionBlock"
            >
              <div>
                <img
                  alt="Aladdin"
                  src="https://image.tmdb.org/t/p/w300/3iYQTLGoy7QnjcUYRJy4YrAgGvp.jpg"
                />
              </div>
              <figcaption>
                <div
                  className="movieTitle"
                >
                  <button
                    href="#"
                    id={420817}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    tabIndex="0"
                    type="button"
                  >
                    Aladdin
                  </button>
                  <span>
                    7.2
                  </span>
                </div>
                <div
                  className="movieGenres"
                >
                  <ul>
                    <li>
                      <button
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        ,
                      </button>
                    </li>
                    <li>
                      <button
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        ,
                      </button>
                    </li>
                    <li>
                      <button
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        ,
                      </button>
                    </li>
                    <li>
                      <button
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        ,
                      </button>
                    </li>
                    <li>
                      <button
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        ,
                      </button>
                    </li>
                    <li>
                      <button
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                      >
                        
                      </button>
                    </li>
                  </ul>
                </div>
              </figcaption>
            </figure>
            <div
              className="hoverMovie"
            >
              <div
                className="hoverControlBlock"
              >
                <label
                  htmlFor="playTrailer"
                  id={420817}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <input
                    className="playTrailer"
                    name="playTrailer"
                    type="button"
                  />
                  Watch Now
                </label>
                <button
                  className="showOverwie"
                  id="showOverwie"
                  onClick={[Function]}
                  type="button"
                >
                  View Info
                </button>
              </div>
              <div
                className="hoverOverwie hoverOverwieNone"
              >
                <button
                  className="hoverClose"
                  id="closeHover"
                  onClick={[Function]}
                  type="button"
                >
                  ╳
                </button>
                <div
                  className="hoverOverwieTitle"
                >
                  <div
                    className="hoverOverwieTitleItem"
                  >
                    <h3>
                      Aladdin
                    </h3>
                    <ul>
                      <li>
                        <button
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          
                        </button>
                      </li>
                    </ul>
                  </div>
                  <div
                    className="hoverOverwieTitleItem"
                  >
                    <p>
                      7.2
                    </p>
                  </div>
                </div>
                <p>
                  A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.
                </p>
                <button
                  id={420817}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  Watch Now
                </button>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </main>
  <footer>
    <div
      className="container"
    >
      <h2>
        FILMS
      </h2>
      <p>
        Copyright © 2019 FILMS. RAMAN BYCHKOU
      </p>
    </div>
  </footer>
</div>
`;

exports[`AppContainer AppContainer renders correctly 1`] = `
<div
  id="root"
>
  <div
    class="wrapper"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <h1
          class="h1"
        >
          FILMS
        </h1>
        <form
          action=""
        >
          <input
            class="searchField"
            tabindex="0"
            type="search"
          />
          <button
            class="btnSearch"
            type="submit"
          >
            ⚲
          </button>
        </form>
      </div>
    </header>
    <main>
      <section
        class="movieDetailsPageContainer"
        style="background-repeat: no-repeat; background-size: cover; background-position: center;"
      >
        <div
          class="mainfilmInfo"
        >
          <div
            class="container"
          >
            <div
              class="mainFilmTitle"
            >
              <h2
                class="filmTitle"
              />
              <div
                class="genres"
              >
                <ul />
              </div>
              <div
                class="starContainer"
              >
                <p
                  class="rate"
                >
                  0
                </p>
              </div>
            </div>
            <div
              class="hideInfo"
              id="mainFilmOverwie"
            >
              <div
                class="mainFilmInfo__info"
              >
                <p />
              </div>
              <div
                class="btnContainer"
              >
                <button
                  class="watch"
                  tabindex="0"
                  type="button"
                >
                  Watch Now
                </button>
                <button
                  class="viewInfo"
                  id="info"
                  tabindex="0"
                  type="button"
                >
                  View Info
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="movieList"
      >
        <div
          class="container"
        >
          <div
            class="moviesSelector"
          >
            <nav>
              <ul>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Trending
                  </button>
                </li>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Top Rated
                  </button>
                </li>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Coming Soon
                  </button>
                </li>
                <li>
                  <select
                    id=""
                    name="genre"
                  >
                    <option
                      value=""
                    >
                      Genre
                    </option>
                    <option>
                      Drama
                    </option>
                  </select>
                </li>
              </ul>
            </nav>
            <div
              class="typeView"
            >
              <button
                id="cards"
                type="button"
              >
                ⚏
              </button>
              <button
                id="lines"
                type="button"
              >
                ⚌
              </button>
            </div>
          </div>
          <div
            class="moviesWrapper"
          >
            <article
              class="movieContainer cards"
            >
              <figure
                class="figcaptionBlock"
              >
                <div>
                  <img
                    alt="Aladdin"
                    src="https://image.tmdb.org/t/p/w300/3iYQTLGoy7QnjcUYRJy4YrAgGvp.jpg"
                  />
                </div>
                <figcaption>
                  <div
                    class="movieTitle"
                  >
                    <button
                      href="#"
                      tabindex="0"
                      type="button"
                    >
                      Aladdin
                    </button>
                    <span>
                      7.2
                    </span>
                  </div>
                  <div
                    class="movieGenres"
                  >
                    <ul>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          Drama,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        />
                      </li>
                    </ul>
                  </div>
                </figcaption>
              </figure>
              <div
                class="hoverMovie"
              >
                <div
                  class="hoverControlBlock"
                >
                  <label
                    for="playTrailer"
                  >
                    <input
                      class="playTrailer"
                      name="playTrailer"
                      type="button"
                    />
                    Watch Now
                  </label>
                  <button
                    class="showOverwie"
                    id="showOverwie"
                    type="button"
                  >
                    View Info
                  </button>
                </div>
                <div
                  class="hoverOverwie hoverOverwieNone"
                >
                  <button
                    class="hoverClose"
                    id="closeHover"
                    type="button"
                  >
                    ╳
                  </button>
                  <div
                    class="hoverOverwieTitle"
                  >
                    <div
                      class="hoverOverwieTitleItem"
                    >
                      <h3>
                        Aladdin
                      </h3>
                      <ul>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            Drama,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          />
                        </li>
                      </ul>
                    </div>
                    <div
                      class="hoverOverwieTitleItem"
                    >
                      <p>
                        7.2
                      </p>
                    </div>
                  </div>
                  <p>
                    A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.
                  </p>
                  <button
                    type="button"
                  >
                    Watch Now
                  </button>
                </div>
              </div>
            </article>
          </div>
        </div>
      </section>
    </main>
    <footer>
      <div
        class="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>
  <div>
    <div
      class="modalWrapper"
      role="button"
      tabindex="0"
    >
      <button
        class="modalClose"
        id="closeModal"
        tabindex="0"
        type="button"
      >
        ╳
      </button>
      <div
        class=""
      >
        <div
          id="trailer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AppContainer Modal: has a error 1`] = `
<div
  id="root"
>
  <div
    class="wrapper"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <h1
          class="h1"
        >
          FILMS
        </h1>
        <form
          action=""
        >
          <input
            class="searchField"
            tabindex="0"
            type="search"
          />
          <button
            class="btnSearch"
            type="submit"
          >
            ⚲
          </button>
        </form>
      </div>
    </header>
    <main>
      <section
        class="movieDetailsPageContainer"
        style="background-repeat: no-repeat; background-size: cover; background-position: center;"
      >
        <div
          class="mainfilmInfo"
        >
          <div
            class="container"
          >
            <div
              class="mainFilmTitle"
            >
              <h2
                class="filmTitle"
              />
              <div
                class="genres"
              >
                <ul />
              </div>
              <div
                class="starContainer"
              >
                <p
                  class="rate"
                >
                  0
                </p>
              </div>
            </div>
            <div
              class="hideInfo"
              id="mainFilmOverwie"
            >
              <div
                class="mainFilmInfo__info"
              >
                <p />
              </div>
              <div
                class="btnContainer"
              >
                <button
                  class="watch"
                  tabindex="0"
                  type="button"
                >
                  Watch Now
                </button>
                <button
                  class="viewInfo"
                  id="info"
                  tabindex="0"
                  type="button"
                >
                  View Info
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="movieList"
      >
        <div
          class="container"
        >
          <div
            class="moviesSelector"
          >
            <nav>
              <ul>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Trending
                  </button>
                </li>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Top Rated
                  </button>
                </li>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Coming Soon
                  </button>
                </li>
                <li>
                  <select
                    id=""
                    name="genre"
                  >
                    <option
                      value=""
                    >
                      Genre
                    </option>
                    <option>
                      Drama
                    </option>
                  </select>
                </li>
              </ul>
            </nav>
            <div
              class="typeView"
            >
              <button
                id="cards"
                type="button"
              >
                ⚏
              </button>
              <button
                id="lines"
                type="button"
              >
                ⚌
              </button>
            </div>
          </div>
          <div
            class="moviesWrapper"
          >
            <article
              class="movieContainer cards"
            >
              <figure
                class="figcaptionBlock"
              >
                <div>
                  <img
                    alt="Aladdin"
                    src="https://image.tmdb.org/t/p/w300/3iYQTLGoy7QnjcUYRJy4YrAgGvp.jpg"
                  />
                </div>
                <figcaption>
                  <div
                    class="movieTitle"
                  >
                    <button
                      href="#"
                      tabindex="0"
                      type="button"
                    >
                      Aladdin
                    </button>
                    <span>
                      7.2
                    </span>
                  </div>
                  <div
                    class="movieGenres"
                  >
                    <ul>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          Drama,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        />
                      </li>
                    </ul>
                  </div>
                </figcaption>
              </figure>
              <div
                class="hoverMovie"
              >
                <div
                  class="hoverControlBlock"
                >
                  <label
                    for="playTrailer"
                  >
                    <input
                      class="playTrailer"
                      name="playTrailer"
                      type="button"
                    />
                    Watch Now
                  </label>
                  <button
                    class="showOverwie"
                    id="showOverwie"
                    type="button"
                  >
                    View Info
                  </button>
                </div>
                <div
                  class="hoverOverwie hoverOverwieNone"
                >
                  <button
                    class="hoverClose"
                    id="closeHover"
                    type="button"
                  >
                    ╳
                  </button>
                  <div
                    class="hoverOverwieTitle"
                  >
                    <div
                      class="hoverOverwieTitleItem"
                    >
                      <h3>
                        Aladdin
                      </h3>
                      <ul>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            Drama,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          />
                        </li>
                      </ul>
                    </div>
                    <div
                      class="hoverOverwieTitleItem"
                    >
                      <p>
                        7.2
                      </p>
                    </div>
                  </div>
                  <p>
                    A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.
                  </p>
                  <button
                    type="button"
                  >
                    Watch Now
                  </button>
                </div>
              </div>
            </article>
          </div>
        </div>
      </section>
    </main>
    <footer>
      <div
        class="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>
  <div>
    <div
      class="modalWrapper"
      role="button"
      tabindex="0"
    >
      <button
        class="modalClose"
        id="closeModal"
        tabindex="0"
        type="button"
      >
        ╳
      </button>
      <div
        class=""
      >
        <div
          id="trailer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AppContainer Modal: has a error 2`] = `
<div
  id="root"
>
  <div
    class="wrapper"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <h1
          class="h1"
        >
          FILMS
        </h1>
        <form
          action=""
        >
          <input
            class="searchField"
            tabindex="0"
            type="search"
          />
          <button
            class="btnSearch"
            type="submit"
          >
            ⚲
          </button>
        </form>
      </div>
    </header>
    <main>
      <section
        class="movieDetailsPageContainer"
        style="background-repeat: no-repeat; background-size: cover; background-position: center;"
      >
        <div
          class="mainfilmInfo"
        >
          <div
            class="container"
          >
            <div
              class="mainFilmTitle"
            >
              <h2
                class="filmTitle"
              />
              <div
                class="genres"
              >
                <ul />
              </div>
              <div
                class="starContainer"
              >
                <p
                  class="rate"
                >
                  0
                </p>
              </div>
            </div>
            <div
              class="hideInfo"
              id="mainFilmOverwie"
            >
              <div
                class="mainFilmInfo__info"
              >
                <p />
              </div>
              <div
                class="btnContainer"
              >
                <button
                  class="watch"
                  tabindex="0"
                  type="button"
                >
                  Watch Now
                </button>
                <button
                  class="viewInfo"
                  id="info"
                  tabindex="0"
                  type="button"
                >
                  View Info
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="movieList"
      >
        <div
          class="container"
        >
          <div
            class="moviesSelector"
          >
            <nav>
              <ul>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Trending
                  </button>
                </li>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Top Rated
                  </button>
                </li>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Coming Soon
                  </button>
                </li>
                <li>
                  <select
                    id=""
                    name="genre"
                  >
                    <option
                      value=""
                    >
                      Genre
                    </option>
                    <option>
                      Drama
                    </option>
                  </select>
                </li>
              </ul>
            </nav>
            <div
              class="typeView"
            >
              <button
                id="cards"
                type="button"
              >
                ⚏
              </button>
              <button
                id="lines"
                type="button"
              >
                ⚌
              </button>
            </div>
          </div>
          <div
            class="moviesWrapper"
          >
            <article
              class="movieContainer cards"
            >
              <figure
                class="figcaptionBlock"
              >
                <div>
                  <img
                    alt="Aladdin"
                    src="https://image.tmdb.org/t/p/w300/3iYQTLGoy7QnjcUYRJy4YrAgGvp.jpg"
                  />
                </div>
                <figcaption>
                  <div
                    class="movieTitle"
                  >
                    <button
                      href="#"
                      tabindex="0"
                      type="button"
                    >
                      Aladdin
                    </button>
                    <span>
                      7.2
                    </span>
                  </div>
                  <div
                    class="movieGenres"
                  >
                    <ul>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          Drama,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        />
                      </li>
                    </ul>
                  </div>
                </figcaption>
              </figure>
              <div
                class="hoverMovie"
              >
                <div
                  class="hoverControlBlock"
                >
                  <label
                    for="playTrailer"
                  >
                    <input
                      class="playTrailer"
                      name="playTrailer"
                      type="button"
                    />
                    Watch Now
                  </label>
                  <button
                    class="showOverwie"
                    id="showOverwie"
                    type="button"
                  >
                    View Info
                  </button>
                </div>
                <div
                  class="hoverOverwie hoverOverwieNone"
                >
                  <button
                    class="hoverClose"
                    id="closeHover"
                    type="button"
                  >
                    ╳
                  </button>
                  <div
                    class="hoverOverwieTitle"
                  >
                    <div
                      class="hoverOverwieTitleItem"
                    >
                      <h3>
                        Aladdin
                      </h3>
                      <ul>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            Drama,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          />
                        </li>
                      </ul>
                    </div>
                    <div
                      class="hoverOverwieTitleItem"
                    >
                      <p>
                        7.2
                      </p>
                    </div>
                  </div>
                  <p>
                    A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.
                  </p>
                  <button
                    type="button"
                  >
                    Watch Now
                  </button>
                </div>
              </div>
            </article>
          </div>
        </div>
      </section>
    </main>
    <footer>
      <div
        class="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>
  <div>
    <div
      class="modalWrapper"
      role="button"
      tabindex="0"
    >
      <button
        class="modalClose"
        id="closeModal"
        tabindex="0"
        type="button"
      >
        ╳
      </button>
      <div
        class=""
      >
        <div
          id="trailer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AppContainer Modal: has a error 3`] = `
<div
  id="root"
>
  <div
    class="wrapper"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <h1
          class="h1"
        >
          FILMS
        </h1>
        <form
          action=""
        >
          <input
            class="searchField"
            tabindex="0"
            type="search"
          />
          <button
            class="btnSearch"
            type="submit"
          >
            ⚲
          </button>
        </form>
      </div>
    </header>
    <main>
      <section
        class="movieDetailsPageContainer"
        style="background-repeat: no-repeat; background-size: cover; background-position: center;"
      >
        <div
          class="mainfilmInfo"
        >
          <div
            class="container"
          >
            <div
              class="mainFilmTitle"
            >
              <h2
                class="filmTitle"
              />
              <div
                class="genres"
              >
                <ul />
              </div>
              <div
                class="starContainer"
              >
                <p
                  class="rate"
                >
                  0
                </p>
              </div>
            </div>
            <div
              class="hideInfo"
              id="mainFilmOverwie"
            >
              <div
                class="mainFilmInfo__info"
              >
                <p />
              </div>
              <div
                class="btnContainer"
              >
                <button
                  class="watch"
                  tabindex="0"
                  type="button"
                >
                  Watch Now
                </button>
                <button
                  class="viewInfo"
                  id="info"
                  tabindex="0"
                  type="button"
                >
                  View Info
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="movieList"
      >
        <div
          class="container"
        >
          <div
            class="moviesSelector"
          >
            <nav>
              <ul>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Trending
                  </button>
                </li>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Top Rated
                  </button>
                </li>
                <li>
                  <button
                    href="#"
                    type="button"
                  >
                    Coming Soon
                  </button>
                </li>
                <li>
                  <select
                    id=""
                    name="genre"
                  >
                    <option
                      value=""
                    >
                      Genre
                    </option>
                    <option>
                      Drama
                    </option>
                  </select>
                </li>
              </ul>
            </nav>
            <div
              class="typeView"
            >
              <button
                id="cards"
                type="button"
              >
                ⚏
              </button>
              <button
                id="lines"
                type="button"
              >
                ⚌
              </button>
            </div>
          </div>
          <div
            class="moviesWrapper"
          >
            <article
              class="movieContainer cards"
            >
              <figure
                class="figcaptionBlock"
              >
                <div>
                  <img
                    alt="Aladdin"
                    src="https://image.tmdb.org/t/p/w300/3iYQTLGoy7QnjcUYRJy4YrAgGvp.jpg"
                  />
                </div>
                <figcaption>
                  <div
                    class="movieTitle"
                  >
                    <button
                      href="#"
                      tabindex="0"
                      type="button"
                    >
                      Aladdin
                    </button>
                    <span>
                      7.2
                    </span>
                  </div>
                  <div
                    class="movieGenres"
                  >
                    <ul>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          ,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        >
                          Drama,
                        </button>
                      </li>
                      <li>
                        <button
                          type="button"
                        />
                      </li>
                    </ul>
                  </div>
                </figcaption>
              </figure>
              <div
                class="hoverMovie"
              >
                <div
                  class="hoverControlBlock"
                >
                  <label
                    for="playTrailer"
                  >
                    <input
                      class="playTrailer"
                      name="playTrailer"
                      type="button"
                    />
                    Watch Now
                  </label>
                  <button
                    class="showOverwie"
                    id="showOverwie"
                    type="button"
                  >
                    View Info
                  </button>
                </div>
                <div
                  class="hoverOverwie hoverOverwieNone"
                >
                  <button
                    class="hoverClose"
                    id="closeHover"
                    type="button"
                  >
                    ╳
                  </button>
                  <div
                    class="hoverOverwieTitle"
                  >
                    <div
                      class="hoverOverwieTitleItem"
                    >
                      <h3>
                        Aladdin
                      </h3>
                      <ul>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            ,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          >
                            Drama,
                          </button>
                        </li>
                        <li>
                          <button
                            type="button"
                          />
                        </li>
                      </ul>
                    </div>
                    <div
                      class="hoverOverwieTitleItem"
                    >
                      <p>
                        7.2
                      </p>
                    </div>
                  </div>
                  <p>
                    A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.
                  </p>
                  <button
                    type="button"
                  >
                    Watch Now
                  </button>
                </div>
              </div>
            </article>
          </div>
        </div>
      </section>
    </main>
    <footer>
      <div
        class="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>
  <div>
    <div
      class="modalWrapper"
      role="button"
      tabindex="0"
    >
      <button
        class="modalClose"
        id="closeModal"
        tabindex="0"
        type="button"
      >
        ╳
      </button>
      <div
        class=""
      >
        <div
          id="trailer"
        />
      </div>
    </div>
  </div>
</div>
`;
